--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+div<!DOCTYPE html>
 <html lang="en">
   <head>
     <title>Title</title>
@@ -25,9 +25,15 @@
       <div class="text-center"><h2>Esercizio 1</h2></div>
       <div class="container">
         <div class="row">
-          <div class="col-4 bg-primary text-white p-3 border border-dark">1</div>
-          <div class="col-4 bg-primary text-white p-3 border border-dark">2</div>
-          <div class="col-4 bg-primary text-white p-3 border border-dark">3</div>
+          <div class="col-4">
+            <div class="bg-primary text-white p-3 border border-dark">1</div>
+          </div>
+          <div class="col-4">
+            <div class="bg-primary text-white p-3 border border-dark">2</div>
+          </div>
+          <div class="col-4">
+            <div class="bg-primary text-white p-3 border border-dark">3</div>
+          </div>
         </div>
       </div>
 
@@ -35,9 +41,15 @@
 
       <div class="container">
         <div class="row">
-          <div class="col-md-4 bg-warning text-dark p-3 border border-dark">1</div>
-          <div class="col-md-4 bg-warning text-dark p-3 border border-dark">2</div>
-          <div class="col-md-4 bg-warning text-dark p-3 border border-dark">3</div>
+          <div class="col-md-4">
+            <div class="bg-warning text-dark p-3 border border-dark">1</div>
+          </div>
+          <div class="col-md-4">
+            <div class="bg-warning text-dark p-3 border border-dark">2</div>
+          </div>
+          <div class="col-md-4">
+            <div class="bg-warning text-dark p-3 border border-dark">3</div>
+          </div>
         </div>
       </div>
 
@@ -45,34 +57,70 @@
 
       <div class="container">
         <div class="row">
-          <div class="col bg-success p-3 border border-dark">1</div>
-          <div class="col bg-success p-3 border border-dark">2</div>
-          <div class="col bg-success p-3 border border-dark">3</div>
+          <div class="col">
+            <div class="bg-success p-3 border border-dark">1</div>
+          </div>
+          <div class="col">
+            <div class="bg-success p-3 border border-dark">2</div>
+          </div>
+          <div class="col">
+            <div class="bg-success p-3 border border-dark">3</div>
+          </div>
         </div>
         <div class="row">
-          <div class="col-sm-4 bg-success p-3 border border-dark">1</div>
-          <div class="col-sm-4 bg-success p-3 border border-dark">2</div>
-          <div class="col-sm-4 bg-success p-3 border border-dark">3</div>
+          <div class="col-sm-4">
+            <div class="bg-success p-3 border border-dark">1</div>
+          </div>
+          <div class="col-sm-4">
+            <div class="bg-success p-3 border border-dark">2</div>
+          </div>
+          <div class="col-sm-4">
+            <div class="bg-success p-3 border border-dark">3</div>
+          </div>
         </div>
         <div class="row">
-          <div class="col-md-4 bg-success p-3 border border-dark">1</div>
-          <div class="col-md-4 bg-success p-3 border border-dark">2</div>
-          <div class="col-md-4 bg-success p-3 border border-dark">3</div>
+          <div class="col-md-4">
+            <div class="bg-success p-3 border border-dark">1</div>
+          </div>
+          <div class="col-md-4">
+            <div class="bg-success p-3 border border-dark">2</div>
+          </div>
+          <div class="col-md-4">
+            <div class="bg-success p-3 border border-dark">3</div>
+          </div>
         </div>
         <div class="row">
-          <div class="col-lg-4 bg-success p-3 border border-dark">1</div>
-          <div class="col-lg-4 bg-success p-3 border border-dark">2</div>
-          <div class="col-lg-4 bg-success p-3 border border-dark">3</div>
+          <div class="col-lg-4">
+            <div class="bg-success p-3 border border-dark">1</div>
+          </div>
+          <div class="col-lg-4">
+            <div class="bg-success p-3 border border-dark">2</div>
+          </div>
+          <div class="col-lg-4">
+            <div class="bg-success p-3 border border-dark">3</div>
+          </div>
         </div>
         <div class="row">
-          <div class="col-xl-4 bg-success p-3 border border-dark">1</div>
-          <div class="col-xl-4 bg-success p-3 border border-dark">2</div>
-          <div class="col-xl-4 bg-success p-3 border border-dark">3</div>
+          <div class="col-xl-4">
+            <div class="bg-success p-3 border border-dark">1</div>
+          </div>
+          <div class="col-xl-4">
+            <div class="bg-success p-3 border border-dark">2</div>
+          </div>
+          <div class="col-xl-4">
+            <div class="bg-success p-3 border border-dark">3</div>
+          </div>
         </div>
         <div class="row">
-          <div class="col-xxl-4 bg-success p-3 border border-dark">1</div>
-          <div class="col-xxl-4 bg-success p-3 border border-dark">2</div>
-          <div class="col-xxl-4 bg-success p-3 border border-dark">3</div>
+          <div class="col-xxl-4">
+            <div class="bg-success p-3 border border-dark">1</div>
+          </div>
+          <div class="col-xxl-4">
+            <div class="bg-success p-3 border border-dark">2</div>
+          </div>
+          <div class="col-xxl-4">
+            <div class="bg-success p-3 border border-dark">3</div>
+          </div>
         </div>
       </div>
 
@@ -80,9 +128,15 @@
 
       <div class="container">
         <div class="row">
-          <div class="col-lg-3 bg-danger text-white p-3 border border-dark">1</div>
-          <div class="col-lg-6 bg-danger text-white p-3 border border-dark">2</div>
-          <div class="col-lg-3 bg-danger text-white p-3 border border-dark">3</div>
+          <div class="col-lg-3">
+            <div class="bg-danger text-white p-3 border border-dark">1</div>
+          </div>
+          <div class="col-lg-6">
+            <div class="bg-danger text-white p-3 border border-dark">2</div>
+          </div>
+          <div class="col-lg-3">
+            <div class="bg-danger text-white p-3 border border-dark">3</div>
+          </div>
         </div>
       </div>
 
@@ -90,11 +144,18 @@
 
       <div class="container">
         <div class="row">
-          <div class="col-lg-4 bg-primary p-3 border border-dark">1</div>
-          <div class="col-lg-8 bg-primary p-3 border border-dark">
+          <div class="col-lg-4">
+            <div class="bg-primary p-3 border border-dark">1</div>
+          </div>
+          <div class="col-lg-8">
+            <div class="bg-primary p-3 border border-dark"></div>
             <div class="row">
-              <div class="col-lg-6 p-3 border border-dark">1</div>
-              <div class="col-lg-6 p-3 border border-dark">2</div>
+              <div class="col-lg-6">
+                <div class="p-3 border border-dark">1</div>
+              </div>
+              <div class="col-lg-6">
+                <div class="p-3 border border-dark">2</div>
+              </div>
             </div>
           </div>
         </div>
@@ -103,8 +164,12 @@
       <div class="text-center mt-5"><h2>Esercizio 6</h2></div>
       <div class="container">
         <div class="row">
-          <div class="col-lg-2 bg-secondary text-white p-3 border border-dark">1</div>
-          <div class="col-lg-2 offset-xl-3 bg-secondary text-white p-3 border border-dark">2</div>
+          <div class="col-lg-2">
+            <div class="bg-secondary text-white p-3 border border-dark">1</div>
+          </div>
+          <div class="col-lg-2">
+            <div class="offset-lg-2 bg-secondary text-white p-3 border border-dark">2</div>
+          </div>
         </div>
       </div>
     </main>
