--- a/index.html
+++ b/index.html
@@ -148,13 +148,14 @@ div<!DOCTYPE html>
             <div class="bg-primary p-3 border border-dark">1</div>
           </div>
           <div class="col-lg-8">
-            <div class="bg-primary p-3 border border-dark"></div>
-            <div class="row">
-              <div class="col-lg-6">
-                <div class="p-3 border border-dark">1</div>
-              </div>
-              <div class="col-lg-6">
-                <div class="p-3 border border-dark">2</div>
+            <div class="bg-primary p-3 border border-dark">
+              <div class="row">
+                <div class="col-lg-6">
+                  <div class="border border-white">1</div>
+                </div>
+                <div class="col-lg-6">
+                  <div class="border border-white">2</div>
+                </div>
               </div>
             </div>
           </div>
